# git2jss

./: .gitignore  LICENSE.md  README.md  README.rst  azure-pipelines.yml  release.sh  requirements.txt  setup.cfg  setup.py
autopkg-recipe/: PythonBDistBuilder.py  PythonDistBuilder.py  git2jss.pkg.recipe
git2jss/: __init__.py  __init__.py.bak  exceptions.py  jss_keyring.py  objects.py  processors.py  vcs.py
tests/: __init__.py  conftest.py  test_git2jss.py  test_processors.py  test_sample.py  test_vcs.py
