[aliases]
test=pytest
develop=test develop

[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[bumpversion]
current_version = 0.0.1 
commit = True 
tag = True

[bumpversion:file:setup.py]
[bumpversion:file:README.md]
[bumpversion:file:autopkg-recipe/git2jss.pkg.recipe]
[bumpversion:file:git2jss/__init__.py]
